--- a/style.css/game-style.css
+++ b/style.css/game-style.css
@@ -1,6 +1,9 @@
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
     /* primary button  */
 .btn{
@@ -56,9 +59,10 @@
     height: 56px;
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
+
 }
 .follow-us div{
-    padding: 17px 35px;
+    padding: 17px 18px
 }
 
 /* play  style  */
@@ -123,8 +127,12 @@ margin-bottom: 24px;
 .we-btn{
     margin-bottom: 24px;
 }
+.our-purpose{
+    width: 520px;
+}
 .unleash{
     font-size: 2rem;
+    font-weight: 500;
 }
 
 /* online games */
@@ -150,37 +158,3 @@ background-clip: text;
     font-size: 1.1rem;
 }
 
-
-/* for mobile(425px) requirement */
-@media screen and (max-width: 425px){
-    /* nav style */
-    .nav-container{
-        flex-direction: column;
-        align-items: center;
-        margin-top: 103px 0 48px 0;
-        text-align: center;
-    }
-    .gamer-logo{
-        margin-bottom: 62px;
-    }
-    .nav-state{
-        flex-direction: column;
-        align-items: center;    
-        gap: 20px;
-    }
-    .follow-us{
-        margin: 48px 0;
-    }
-
-    .play{
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        margin-left: 300px;
-
-    }
-    .we-are-gamer{
-        display: flex;
-        flex-direction: column;
-    }
-}
