--- a/style.css/game-style.css
+++ b/style.css/game-style.css
@@ -13,11 +13,13 @@
         border: none;
         color: #FFF;
         font-size: 1.1rem;
+        font-weight: 600;
     }
 /* primary text  */
 .discription-color{
     color: #534C64;
     font-size: 1.5rem;
+    font-weight: 400;
 }
 /* header style- Navbar */
 .nav-container{
@@ -71,6 +73,7 @@
     grid-template-columns: repeat(2, 1fr);
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+    
 }
 .play-content{
 
@@ -82,6 +85,7 @@
 .play-tittle{
     color: #0B0223;
     font-size: 3rem;
+    font-weight: 600;
 }
 .play-head{
     font-size: 6rem;
@@ -90,15 +94,18 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 24px;
+    font-weight: 800;
 }
 
 .play-option{
     margin-bottom: 17px;
     align-items: center;
+    font-weight: 500;
 }
 .go-rogue{
     background: #4EC5F7;
     margin-left: 24px;
+    font-weight: 600;
 }
 
 /* we are gamer  */
@@ -157,4 +164,35 @@ background-clip: text;
 .card-container p{
     font-size: 1.1rem;
 }
+/* play instantly */
+.play-instantly{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 240px;
+}
+.play-instantly-content h1{
+    font-size: 3rem;
+    text-align: right;
+}
+.play-instantly-content p{
+    text-align: right;
+}
+.play-inst-color{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.play-inst-img1{
+    position: relative;
+    margin: 0;
+    left: 200px;
+    top: 100px;
+    border-radius: 8px;
+    border: 10px solid #FFF;
+    background: url(<path-to-image>), lightgray 0px -0.304px / 100% 117.229% no-repeat;
+}
+
+
 
