--- a/style.css/game-style.css
+++ b/style.css/game-style.css
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: space-between;
     margin: 37px 240px;
+
 }
 
 /* Gamer logo  */
@@ -73,7 +74,6 @@
 /* play  style  */
 .play{
     display: flex;
-    grid-template-columns: repeat(2, 1fr);
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
     
@@ -293,15 +293,17 @@ footer{
     font-weight: 500;
 }
 
-.hd{
+/* .hd{
     visibility: hidden;
-}
+} */
 
 @media screen and (max-width:425px) {
     .nav-container , .nav-state , .play, .we-are-gamer{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
+
     }
     .play{
         flex-direction: column-reverse;
